--- a/css/unpaid.webflow.css
+++ b/css/unpaid.webflow.css
@@ -35,8 +35,8 @@ body {
 }
 
 .description {
-  margin-right: 30%;
-  margin-left: 30%;
+  display: block;
+  width: 600px;
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   text-align: center;
 }
@@ -44,6 +44,10 @@ body {
 .logo {
   font-size: 238px;
   line-height: 233px;
+}
+
+.launch-date {
+  text-align: center;
 }
 
 .div-block {
@@ -101,6 +105,8 @@ body {
 
 .image {
   position: absolute;
+  width: 700px;
+  min-width: 200px;
 }
 
 .image._2 {
@@ -167,4 +173,54 @@ body {
 
 .word-5 {
   width: 350px;
+}
+
+.bold-text {
+  text-align: center;
+}
+
+@media (max-width: 479px) {
+  .description {
+    width: 100%;
+    padding-right: 10px;
+    padding-left: 10px;
+    font-size: 18px;
+  }
+  .launch-date {
+    font-size: 25px;
+  }
+  .heading {
+    font-size: 16px;
+    line-height: 17px;
+  }
+  .div-block-2 {
+    padding-left: 10px;
+  }
+  .image {
+    width: 250px;
+  }
+  .word {
+    width: 250px;
+  }
+  .word-1 {
+    width: 250px;
+  }
+  .word-2 {
+    width: 250px;
+  }
+  .word-3 {
+    width: 250px;
+  }
+  .word-4 {
+    width: 250px;
+  }
+  .word-5 {
+    width: 250px;
+  }
+  .div-block-3 {
+    padding: 58px;
+  }
+  .bold-text {
+    font-size: 24px;
+  }
 }
