Add animation and change date to Nov 16

--- a/css/unpaid.css
+++ b/css/unpaid.css
@@ -131,7 +131,10 @@ body {
 
 .section-2 {
   position: fixed;
-  display: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   width: 100%;
   height: 100vh;
   -webkit-box-pack: center;
@@ -174,6 +177,10 @@ body {
 .word-5 {
   width: 350px;
   max-width: 80%;
+}
+
+.div-block-3 {
+  position: static;
 }
 
 .bold-text {
@@ -264,3 +271,4 @@ body {
     font-size: 24px;
   }
 }
+
