--- a/css/unpaid.css
+++ b/css/unpaid.css
@@ -131,10 +131,7 @@ body {
 
 .section-2 {
   position: fixed;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   width: 100%;
   height: 100vh;
   -webkit-box-pack: center;
@@ -218,6 +215,32 @@ body {
   opacity: 0.7;
 }
 
+.get-notified-button {
+  position: relative;
+  z-index: 2;
+  padding: 18px 30px;
+  border: 5px solid #000;
+  background-color: transparent;
+  color: #333;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.div-block-4 {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  z-index: 1;
+  border: 3px solid #000;
+}
+
+.div-block-5 {
+  position: relative;
+  margin-top: 20px;
+}
+
 @media (max-width: 991px) {
   .image {
     width: 70vw;
@@ -226,6 +249,26 @@ body {
     -webkit-transform: translate(-1vw, -1vw);
     -ms-transform: translate(-1vw, -1vw);
     transform: translate(-1vw, -1vw);
+  }
+  .get-notified-button {
+    padding: 12px 20px;
+    background-color: #000;
+    color: #f5f5f5;
+    font-size: 20px;
+  }
+  .div-block-4 {
+    -webkit-transform: translate(-7px, -7px);
+    -ms-transform: translate(-7px, -7px);
+    transform: translate(-7px, -7px);
+  }
+}
+
+@media (max-width: 767px) {
+  .div-block-4 {
+    border-width: 2px;
+    -webkit-transform: translate(-5px, -5px);
+    -ms-transform: translate(-5px, -5px);
+    transform: translate(-5px, -5px);
   }
 }
 
@@ -269,6 +312,10 @@ body {
   }
   .bold-text {
     font-size: 24px;
+  }
+  .get-notified-button {
+    padding: 8px 12px;
+    font-size: 16px;
   }
 }
 
